[project]
name = "msy-kuroshio"
version = "0.1.0"
description = "黒潮大蛇行レジームが日本近海4魚種に与える影響のODEモデル・MSY計算"
authors = [
    {name = "fukushunya0924-art",email = "fuku.shunya0924@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.5.1,<3.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
